# endweave

./: .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  README.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: build.yml  publish.yml  release.yml
include/endweave/: connection.h  debug.h  exception.h  pipeline.h
include/endweave/codec/: reader.h  wrapper.h  writer.h
include/endweave/codec/types/: actor_data.h  biome.h  camera.h  commands.h  data_store.h  enums.h  gameplay.h  inventory.h  item.h  level_settings.h  nbt.h  primitives.h  structure.h
include/endweave/protocol/: base.h  direction.h  manager.h  packet_ids.h  protocol.h  sound_rewriter.h  versions.h
include/endweave/protocol/v859_to_v860/: protocol.h
include/endweave/protocol/v860_to_v859/: protocol.h
include/endweave/protocol/v860_to_v898/: handlers.h  protocol.h
include/endweave/protocol/v898_to_v860/: handlers.h  protocol.h
include/endweave/protocol/v898_to_v924/: protocol.h
include/endweave/protocol/v924_to_v898/: protocol.h
include/endweave/protocol/v924_to_v944/: handlers.h  protocol.h
include/endweave/protocol/v944_to_v924/: handlers.h  protocol.h
src/: pipeline.cpp
src/codec/: reader.cpp  wrapper.cpp  writer.cpp
src/codec/types/: actor_data.cpp  biome.cpp  camera.cpp  commands.cpp  data_store.cpp  gameplay.cpp  inventory.cpp  item.cpp  level_settings.cpp  nbt.cpp  structure.cpp
src/endstone_endweave/: __init__.py  config.toml  connection.py  debug.py  exception.py  metrics.py  pipeline.py  player_state.py  plugin.py  session.py  update.py
src/endstone_endweave/codec/: __init__.py  nbt.py  reader.py  types.py  wrapper.py  writer.py
src/endstone_endweave/codec/types/: __init__.py  actor_data.py  biome.py  camera.py  commands.py  crafting.py  data_store.py  enums.py  (+7 more)
src/endstone_endweave/data/: v924_packets.json  v924_v944_diff.json  v944_packets.json
src/endstone_endweave/protocol/: __init__.py  base.py  base_protocol.py  direction.py  manager.py  mapping_data.py  packet_ids.py  registry.py  rewriter.py  sound_rewriter.py  versions.py
src/endstone_endweave/rewriter/: __init__.py  actor_event.py  sound.py
src/protocol/: base.cpp  packet_ids.cpp  sound_rewriter.cpp
src/protocol/v860_to_v898/: handlers.cpp  protocol.cpp
src/protocol/v898_to_v860/: protocol.cpp
src/protocol/v898_to_v924/: protocol.cpp
src/protocol/v924_to_v898/: protocol.cpp
src/protocol/v924_to_v944/: block_pos.cpp  misc.cpp  protocol.cpp
src/protocol/v944_to_v924/: block_pos.cpp  misc.cpp  protocol.cpp
tests/: conftest.py  helpers.py  test_base_protocol.py  test_block_pos.py  test_block_pos_packets.py  test_cancel_and_input_locks.py  test_chain.py  test_codec.cpp  test_codec.py  test_connection.py  test_enum_map.py  test_error_scenarios.py  test_gameplay_rewriter.py  test_login_rewriter.py  test_nbt.cpp  test_nbt_skip.py  test_pipeline.py  test_protocol.cpp  test_sound_rewriter.py  test_start_game.py  test_v924_to_v944.py  test_v944_to_v975.py  test_wrapper.py
tools/: diff.py  fetch.py  fetch_protocol_docs.py  generate_diff.py  models.py  parse.py  parse_dot_files.py  parse_protocol_docs.py
(+133 files in other folders)
