[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "endstone-endweave"
version = "0.1.0"
dependencies = []
description = "Protocol translation plugin for Bedrock - allows newer clients on older servers"
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["endstone", "plugin", "protocol", "translation"]

[project.entry-points."endstone"]
endweave = "endstone_endweave:EndweavePlugin"
